# friedrich-anki-dashboard

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_seed_robert.py
assets/brawlers/friedrich-englisch/: manifest.json
assets/brawlers/friedrich-mathematik/: manifest.json
assets/brawlers/friedrich-musik/: manifest.json
assets/brawlers/robert-englisch/: manifest.json
assets/brawlers/robert-italienisch/: manifest.json
assets/style/: style-guide.md
frontend/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/src/components/: BrawlerAvatar.astro  StatusCard.astro
frontend/src/layouts/: Default.astro
frontend/src/pages/: index.astro
frontend/src/styles/: global.css
infra/: cloudflare-setup.md
infra/launchd/: README.md  eu.parei.dashboard.nightly.plist
src/dashboard/: __init__.py  app.py  auth.py  bonus_engine.py  config.py  db.py  models.py  schemas.py
src/dashboard/pipeline/: __init__.py  anki.py  cli.py
src/dashboard/routes/: health.py  state.py  stats.py
tests/: conftest.py  test_api.py  test_bonus_engine.py  test_models.py  test_pipeline.py
