[project]
name = "friedrich-anki-dashboard"
version = "0.1.0"
description = "Visualisierungs-Dashboard fuer Anki-Lernen der Familie Parei (Streak + Coin-Counter, Brawler-Avatars, VPS-Hosted)"
authors = [
    { name = "Robert Parei", email = "robert.parei@parei.eu" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
dashboard-pipeline = "dashboard.cli.pipeline:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
